Bug 902181 - Should wrap domain input element where possible

--- a/console/app/assets/stylesheets/_type.scss
+++ b/console/app/assets/stylesheets/_type.scss
@@ -305,3 +305,8 @@ ul.unstyled-flat {
 .section {
   margin-bottom: 30px;
 }
+
+// A semantic element that is wrapped
+.wrap {
+  white-space: normal !important;
+}
